syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";

message WarriorTalents {
	// Arms
	int32 improved_heroic_strike = 1;
	int32 deflection = 2;
	int32 improved_rend = 3;
	int32 improved_charge = 4;
	int32 tactical_mastery = 5;
	int32 improved_thunder_clap = 6;
	int32 improved_overpower = 7;
	bool anger_management = 8;
	int32 deep_wounds = 9;
	int32 two_handed_weapon_specialization = 10;
	int32 impale = 11;
	int32 axe_specialization = 12;
	bool sweeping_strikes = 13;
	int32 mace_specialization = 14;
	int32 sword_specialization = 15;
	int32 polearm_specialization = 16;
	int32 improved_hamstring = 17;
	bool mortal_strike = 18;

	// Fury
	int32 booming_voice = 19;
	int32 cruelty = 20;
	int32 improved_demoralizing_shout = 21;
	int32 unbridled_wrath = 22;
	int32 improved_cleave = 23;
	bool piercing_howl = 24;
	int32 blood_craze = 25;
	int32 improved_battle_shout = 26;
	int32 dual_wield_specialization = 27;
	int32 improved_execute = 28;
	int32 enrage = 29;
	int32 improved_slam = 30;
	bool death_wish = 31;
	int32 improved_intercept = 32;
	int32 improved_berserker_rage = 33;
	int32 flurry = 34;
	bool bloodthirst = 35;

	// Protection
	int32 shield_specialization = 36;
	int32 anticipation = 37;
	int32 improved_bloodrage = 38;
	int32 toughness = 39;
	int32 iron_will = 40;
	bool last_stand = 41;
	int32 improved_shield_block = 42;
	int32 improved_revenge = 43;
	int32 defiance = 44;
	int32 improved_sunder_armor = 45;
	int32 improved_disarm = 46;
	int32 improved_taunt = 47;
	int32 improved_shield_wall = 48;
	bool concussion_blow = 49;
	int32 improved_shield_bash = 50;
	int32 one_handed_weapon_specialization = 51;
	bool shield_slam = 52;
}

enum WarriorRune {
	WarriorRuneNone = 0;
	RuneBloodFrenzy = 403474;
	RuneFlagellation = 403480;
	RuneRagingBlow = 425444;
	RuneWarbringer = 425445;
	RuneVictoryRush = 403470;
	RuneDevastate = 403475;
	RuneEndlessRage = 403489;
	RuneSingleMindedFury = 416003;
	RuneQuickStrike = 425443;
	RuneFuriousThunder = 403476;
	RuneConsumedByRage = 425446;
	RuneFrenziedAssault = 425447;
}

enum WarriorShout {
	WarriorShoutNone = 0;
	WarriorShoutBattle = 1;
	WarriorShoutCommanding = 2;
}

message Warrior {
	message Rotation {
		bool use_cleave = 1;
		bool use_rend = 2;
		bool use_ms = 18;
		bool use_slam = 3;

		enum MainGcd {
			None = 0;
			Slam = 1;
			Bloodthirst = 2;
			Whirlwind = 3;
		}
		MainGcd main_gcd = 4;

		enum SunderArmor {
			SunderArmorNone = 0;
			SunderArmorHelpStack = 1;
			SunderArmorMaintain = 2;
		}
		SunderArmor sunderArmor = 5;
		bool maintain_demo_shout = 6;
		bool maintain_thunder_clap = 7;

		// Queue HS or Cleave when over this threshold.
		double hs_rage_threshold = 8;

		// Use Mortal Strike when over this threshold.
		double ms_rage_threshold = 9;

		// Use Rend when below this threshold.
		double rend_rage_threshold_below = 10;

		// Use Slam when over this threshold.
		double slam_rage_threshold = 11;

		// Refresh Rend when remaining duration is less than this threshold.
		double rend_cd_threshold = 12;

		bool use_hs_during_execute = 13;
		bool use_bt_during_execute = 14;
		bool spam_execute = 15;
		bool use_ww_during_execute = 16;
		bool use_slam_over_execute = 17;

		enum StanceOption {
			DefaultStance = 0;
			BattleStance = 1;
			BerserkerStance = 2;
		}
		StanceOption stance_option = 19;
		double rend_health_threshold_above = 20;

		// Only used for Fury
		bool use_overpower = 21;
		bool execute_phase_overpower = 22;
		double bloodsurge_duration_threshold = 25;

		enum SpellOption {
			NoSpell = 0;
			BloodthirstCustom = 1;
			MortalStrike = 2;
			WhirlwindCustom = 3;
			SlamCustom = 4;
			Rend = 5;
			Overpower = 6;
			Execute = 7;
			ThunderClap = 8;
			SlamExpiring = 9;
		}
		CustomRotation custom_rotation = 23;
		bool custom_rotation_option = 24;
	}
	Rotation rotation = 1;

	message Options {
		double starting_rage = 1;
		bool use_recklessness = 2;
		bool use_shattering_throw = 4;
		WarriorShout shout = 3;
		bool stance_snapshot = 6;
		bool disable_expertise_gemming = 7;
	}
	Options options = 3;
}

message ProtectionWarrior {
	message Rotation {
		enum DemoShoutChoice {
			DemoShoutChoiceNone = 0;
			DemoShoutChoiceMaintain = 1;
			DemoShoutChoiceFiller = 2;
		}
		DemoShoutChoice demo_shout_choice = 1;

		enum ThunderClapChoice {
			ThunderClapChoiceNone = 0;
			ThunderClapChoiceMaintain = 1;
			ThunderClapChoiceOnCD = 2;
		}
		ThunderClapChoice thunder_clap_choice = 2;

		enum SpellOption {
			NoSpell = 0;
			Revenge = 1;
			ShieldSlam = 2;
			Devastate = 3;
			SunderArmor = 4;
			Shout = 5;
			DemoralizingShout = 6;
			ThunderClap = 7;
			MortalStrike = 8;
			ConcussionBlow = 9;
			Shockwave = 10;
		}
		CustomRotation custom_rotation = 3;

		double hs_rage_threshold = 4;
		bool prio_sslam_on_shield_block = 5;
	}
	Rotation rotation = 1;

	message Options {
		double starting_rage = 1;

		WarriorShout shout = 4;
		bool use_shattering_throw = 8;
	}
	Options options = 3;
}
